# no_rel_db

./: app.py  app_odm.py  cache.py  ex_1.py  main_odm.py  pyproject.toml  redis_ex.py
01_hello_word/: consumer.py
02_task/: consumer.py  producer.py
03_Pub_Sub/: consumer.py  producer.py
app/: app_.py
app_ex/: app_.py  consumer.py  models.py
celery_ex/: my_task.py
ht_8/: authors.json  models.py  search.py  seed.py
ht_8/additional_task/: consumer.py  consumer_email.py  consumer_sms.py  model.py  producer.py
