[tool.poetry]
name = "no-rel-db"
version = "0.1.0"
description = ""
authors = ["AntonHran <for.program.learning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
mongoengine = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
